mType/tests/testFiles/import/pass/modules/ReexportModuleA.mt
class ReexportedClass {
    fun getValue(): String {
        return "Reexported from A";
    }
}
