mType/tests/testFiles/import/error/modules/BrokenSyntaxModule.mt
// This file has syntax errors
class BrokenClass {
    fun test(): String {
        return "This should fail
    }
    // Missing closing brace and quote
